# SushiAI

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
core/: cuda_utils.h  ops.cpp  ops.cu  ops.h  tensor.cpp  tensor.h
core/loss/: loss.cpp  loss.h
core/neuralnetwork/: initializer.h  layer.cpp  layer.h  sequential.cpp  sequential.h
core/operations/: ops.cpp  ops.h
core/optimizer/: optimizer.cpp  optimizer.h
core/sushiAI/: loss  neuralnetwork  optimizer  tensor
core/tensor/: tensor.cpp  tensor.h
core/tensor/operations/: ops.cpp  ops.h
docs/: Changelog.md  Roadmap.md
loss/: loss.cpp  loss.h
models/: tsagi12.sushi
nn/: initializer.h  layer.cpp  layer.h  sequential.cpp  sequential.h
optim/: optimizer.cpp  optimizer.h
sushiBLAS/core/: backend.h  cpu_backend.cpp  cpu_backend.h  sushiBLAS.cpp
